--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
-    "@supabase/supabase-js": "^2.38.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "mapbox-gl": "^2.15.0",
